# Track

./: CMakeLists.txt  out.csv
Source/: CameraEmulator.cpp  CameraEmulator.h  Frame.h  Tracker.cpp  Tracker.h  main.cpp
Source/Utils/: DetectorsData.h  MatrixUtils.h  OutData.cpp  OutData.h  Stats.h  Timer.h
